--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 			<a class = "toc item">About</a>
 
 	<div class="right item">
-		<a class="ui button">Login</a>
-		<a class="ui button">Log out</a>
+		<a class="ui button">Login</a> <!-- link to the modal for signin --> 
+		<a class="ui button">Log out</a> <!-- link to delete the session, prompt to login afterwards -->
 	</div>
 	</div>
 </div>
@@ -21,7 +21,7 @@
 <div class="ui container">
 	<div class="ui category search" style="text-align: center; margin-top:3em;">
   <div class="ui icon input">
-    <input class="prompt" type="text" placeholder="Search tubs...">
+    <input class="prompt" type="text" placeholder="Search tubs..."><!-- search build out -->
     <i class="search icon"></i>
   </div>
   <div class="results"></div>
