--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 <div class="ui text container" style="text-align:center; margin-top: 3em;">
 	<h1>BookATub</h1>
-	<h2 style="color: gray;">For all your immediate relaxation...</h2>
+	<h2 style="color: gray;">For all your immediate relaxation needs...</h2>
 </div>
 <div class="ui container">
 	<div class="ui category search" style="text-align: center; margin-top:3em;">
