adding styling and content to forms

--- a/_updateform.html
+++ b/_updateform.html
@@ -4,6 +4,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
 </head>
+<div class="ui container" style="width: 30%; margin: 2em auto;">
+  <h1>Update Your Tub Listing</h1>
 <div class="ui form">
   <div class="field">
     <label>Name</label>
@@ -19,4 +21,6 @@
   </div>
   	<!-- insert availability form -->
   	<!-- photo upload edit -->
+    <button class="ui button">Submit</button>
+</div>
 </div>
