--- a/_createform.html
+++ b/_createform.html
@@ -1,9 +1,11 @@
 <head>
-	<title>BookATub</title>
-	   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
+  <title>BookATub</title>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
 </head>
+<div class="ui container" style="width: 30%; margin: 2em auto;">
+  <h1>Create a Tub Listing</h1>
 <div class="ui form">
   <div class="field">
     <label>Name</label>
@@ -19,4 +21,6 @@
   </div>
   	<!-- insert availability form -->
   	<!-- photo upload edit -->
+    <button class="ui button">Submit</button>
+</div>
 </div>
