--- a/_signin.html
+++ b/_signin.html
@@ -1,3 +1,10 @@
+<head>
+  <title>BookATub</title>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
+</head>
+<div class="ui text container" style="width:30%; margin: 2em auto;">
 <form class="ui form">
   <div class="field">
     <label>Username</label>
@@ -5,3 +12,4 @@
   </div>
   <button class="ui button" type="submit">Submit</button>
 </form>
+</div>
