--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 	   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
+    <script type="text/javascript" src='src/index.js'></script>
+    <script type="text/javascript" src='src/Listing.js'></script>
 </head>
 <div class="ui container">
 	<div class="ui borderless main menu">
 			<a class = "toc item">About</a>
 
 	<div class="right item">
-		<a class="ui button">Login</a> <!-- link to the modal for signin --> 
+		<a class="ui button">Login</a> <!-- link to the modal for signin -->
 		<a class="ui button">Log out</a> <!-- link to delete the session, prompt to login afterwards -->
 	</div>
 	</div>
@@ -29,8 +31,10 @@
 </div>
 
 <div class="ui container" style="width: 65%; margin: 2em auto;">
-	<div class="ui link cards">
-	<a class="ui card" href="#">
+	<div class="ui link cards" id = 'list-o-cards'>
+
+
+	<!-- <a class="ui card" href="#">
   <div class="content">
     <div class="header">Old-Fashioned Tub</div>
     <div class="meta">
@@ -45,194 +49,11 @@
       <img class="ui avatar image" src="/images/avatar/small/matt.jpg" alt="host-id-pic"> Matt
     </div>
   </div>
-</a>
-<a class="ui card" href="#">
-  <div class="content">
-    <div class="header">Old-Fashioned Tub</div>
-    <div class="meta">
-      <span class="category">Tubs</span>
-    </div>
-    <div class="description">
-      <p>A relaxing tub. Rub-a-dub.</p>
-    </div>
-  </div>
-  <div class="extra content">
-    <div class="right floated author">
-      <img class="ui avatar image" src="/images/avatar/small/matt.jpg" alt="host-id-pic"> Matt
-    </div>
-  </div>
-</a>
-<a class="ui card" href="#" style="float:left;">
-  <div class="content">
-    <div class="header">Old-Fashioned Tub</div>
-    <div class="meta">
-      <span class="category">Tubs</span>
-    </div>
-    <div class="description">
-      <p>A relaxing tub. Rub-a-dub.</p>
-    </div>
-  </div>
-  <div class="extra content">
-    <div class="right floated author">
-      <img class="ui avatar image" src="/images/avatar/small/matt.jpg" alt="host-id-pic"> Matt
-    </div>
-  </div>
-</a>
-</div>
-</div>
-<div class="ui container" style="width: 65%; margin: 2em auto;">
-	<div class="ui link cards">
-	<a class="ui card" href="#">
-  <div class="content">
-    <div class="header">Old-Fashioned Tub</div>
-    <div class="meta">
-      <span class="category">Tubs</span>
-    </div>
-    <div class="description">
-      <p>A relaxing tub. Rub-a-dub.</p>
-    </div>
-  </div>
-  <div class="extra content">
-    <div class="right floated author">
-      <img class="ui avatar image" src="/images/avatar/small/matt.jpg" alt="host-id-pic"> Matt
-    </div>
-  </div>
-</a>
-<a class="ui card" href="#">
-  <div class="content">
-    <div class="header">Old-Fashioned Tub</div>
-    <div class="meta">
-      <span class="category">Tubs</span>
-    </div>
-    <div class="description">
-      <p>A relaxing tub. Rub-a-dub.</p>
-    </div>
-  </div>
-  <div class="extra content">
-    <div class="right floated author">
-      <img class="ui avatar image" src="/images/avatar/small/matt.jpg" alt="host-id-pic"> Matt
-    </div>
-  </div>
-</a>
-<a class="ui card" href="#" style="float:left;">
-  <div class="content">
-    <div class="header">Old-Fashioned Tub</div>
-    <div class="meta">
-      <span class="category">Tubs</span>
-    </div>
-    <div class="description">
-      <p>A relaxing tub. Rub-a-dub.</p>
-    </div>
-  </div>
-  <div class="extra content">
-    <div class="right floated author">
-      <img class="ui avatar image" src="/images/avatar/small/matt.jpg" alt="host-id-pic"> Matt
-    </div>
-  </div>
-</a>
-</div>
-</div>
-<div class="ui container" style="width: 65%; margin: 2em auto;">
-	<div class="ui link cards">
-	<a class="ui card" href="#">
-  <div class="content">
-    <div class="header">Old-Fashioned Tub</div>
-    <div class="meta">
-      <span class="category">Tubs</span>
-    </div>
-    <div class="description">
-      <p>A relaxing tub. Rub-a-dub.</p>
-    </div>
-  </div>
-  <div class="extra content">
-    <div class="right floated author">
-      <img class="ui avatar image" src="/images/avatar/small/matt.jpg" alt="host-id-pic"> Matt
-    </div>
-  </div>
-</a>
-<a class="ui card" href="#">
-  <div class="content">
-    <div class="header">Old-Fashioned Tub</div>
-    <div class="meta">
-      <span class="category">Tubs</span>
-    </div>
-    <div class="description">
-      <p>A relaxing tub. Rub-a-dub.</p>
-    </div>
-  </div>
-  <div class="extra content">
-    <div class="right floated author">
-      <img class="ui avatar image" src="/images/avatar/small/matt.jpg" alt="host-id-pic"> Matt
-    </div>
-  </div>
-</a>
-<a class="ui card" href="#" style="float:left;">
-  <div class="content">
-    <div class="header">Old-Fashioned Tub</div>
-    <div class="meta">
-      <span class="category">Tubs</span>
-    </div>
-    <div class="description">
-      <p>A relaxing tub. Rub-a-dub.</p>
-    </div>
-  </div>
-  <div class="extra content">
-    <div class="right floated author">
-      <img class="ui avatar image" src="/images/avatar/small/matt.jpg" alt="host-id-pic"> Matt
-    </div>
-  </div>
-</a>
-</div>
-</div>
-<div class="ui container" style="width: 65%; margin: 2em auto;">
-	<div class="ui link cards">
-	<a class="ui card" href="#">
-  <div class="content">
-    <div class="header">Old-Fashioned Tub</div>
-    <div class="meta">
-      <span class="category">Tubs</span>
-    </div>
-    <div class="description">
-      <p>A relaxing tub. Rub-a-dub.</p>
-    </div>
-  </div>
-  <div class="extra content">
-    <div class="right floated author">
-      <img class="ui avatar image" src="/images/avatar/small/matt.jpg" alt="host-id-pic"> Matt
-    </div>
-  </div>
-</a>
-<a class="ui card" href="#">
-  <div class="content">
-    <div class="header">Old-Fashioned Tub</div>
-    <div class="meta">
-      <span class="category">Tubs</span>
-    </div>
-    <div class="description">
-      <p>A relaxing tub. Rub-a-dub.</p>
-    </div>
-  </div>
-  <div class="extra content">
-    <div class="right floated author">
-      <img class="ui avatar image" src="/images/avatar/small/matt.jpg" alt="host-id-pic"> Matt
-    </div>
-  </div>
-</a>
-<a class="ui card" href="#" style="float:left;">
-  <div class="content">
-    <div class="header">Old-Fashioned Tub</div>
-    <div class="meta">
-      <span class="category">Tubs</span>
-    </div>
-    <div class="description">
-      <p>A relaxing tub. Rub-a-dub.</p>
-    </div>
-  </div>
-  <div class="extra content">
-    <div class="right floated author">
-      <img class="ui avatar image" src="/images/avatar/small/matt.jpg" alt="host-id-pic"> Matt
-    </div>
-  </div>
-</a>
+</a> -->
+
+
+
+
+
 </div>
 </div>
