--- a/_show.html
+++ b/_show.html
@@ -4,7 +4,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
 </head>
-<div class="ui container" style="margin: 2em auto; padding-left: 2em;">
+<div class="ui container" style="height: 50%; width: 80%;margin: 2em auto; padding-left: 2em;">
+
 <div class="ui cards">
   <div class="card">
     <div class="content">
