reservations and listings added to User show page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script type="text/javascript" src='src/index.js'></script>
     <script type="text/javascript" src='src/Listing.js'></script>
     <script type="text/javascript" src='src/User.js'></script>
+    <script type="text/javascript" src='src/Reservation.js'></script>
+
 </head>
 
 <div class="ui container">
@@ -20,24 +22,28 @@
 	</div>
 </div>
 
-<div class="ui text container" style="text-align:center; margin-top: 3em;" id="index-text">
-	<h1>BookATub</h1>
-	<h2 style="color: gray;">For all your immediate relaxation needs...</h2>
-</div>
+<div id="entire-page">
+		<div class="ui text container" style="text-align:center; margin-top: 3em;" id="index-text">
+			<h1>BookATub</h1>
+			<h2 style="color: gray;">For all your immediate relaxation needs...</h2>
+		</div>
 
-<div class="ui container" id= "index-search">
-	<div class="ui category search" style="text-align: center; margin-top:3em;">
-	  <div class="ui icon input">
-	    <input class="prompt" type="text" placeholder="Search tubs..."><!-- search build out -->
-	    <i class="search icon"></i>
-	  </div>
-	  <div class="results"></div>
-	</div>
-</div>
+		<div class="ui container" id= "index-search">
+			<div class="ui category search" style="text-align: center; margin-top:3em;">
+			  <div class="ui icon input">
+			    <input class="prompt" type="text" placeholder="Search tubs..."><!-- search build out -->
+			    <i class="search icon"></i>
+			  </div>
+			  <div class="results"></div>
+			</div>
+		</div>
 
-<div class="ui container" style="width: 65%; margin: 2em auto;" id="index-cards">
-	<div class="ui link cards" id = 'list-o-cards'>
+		<div class="ui container" style="width: 65%; margin: 2em auto;" id="index-cards">
+			<div class="ui link cards" id = 'list-o-cards'>
 
 
-	</div>
+			</div>
+		</div>
+
+		<!-- UI 3 column grid -->
 </div>
