added functionality and page rerendering

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <div class="ui container">
 	<div class="ui borderless main menu">
-			<a class = "toc item">About</a>
+			<a class = "toc item" id='about-btn'>About</a>
+			<a class = "toc item" id='home-btn'>Home</a>
 
 	<div class="right item">
 		<a class="ui button" id='user-btn'>User</a> <!-- link to the modal for signin -->
@@ -38,7 +39,7 @@
 			</div>
 		</div>
 
-		<div class="ui container" style="width: 65%; margin: 2em auto;" id="index-cards">
+		<div align = "center" class="ui container" style="width: 65%; margin: 2em auto;" id="index-cards">
 			<div class="ui link cards" id = 'list-o-cards'>
 
 
